--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,18 @@ edition = "2021"
 # Need to use git right now, because GlobalShortcuts only work from 0.9.0+
 ashpd = { version = "0.9.0", git = "https://github.com/bilelmoussaoui/ashpd.git", features = ["gtk4_wayland", "wayland"] }
 async-channel = "2.3.1"
+bytemuck = "1.16.0"
 clap = { version = "4.5.7", features = ["derive"] }
 color-eyre = "0.6.3"
+cpal = "0.15.3"
 evdev = { version = "0.12.2", features = ["tokio"] }
 gdk = { version = "0.8.2", package = "gdk4", features = ["v4_14"] }
 gdk-wayland = { version = "0.8.2", package = "gdk4-wayland", features = ["wayland_crate", "v4_12"] }
 gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
 gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell" }
-tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
+tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync"] }
 #wayland-backend = { version = "0.3.4", features = ["client_system"] }
 #wayland-client = "0.31.3"
 #wayland-protocols = { version = "0.32.1", features = ["unstable", "client"] }
