--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
 gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell" }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
-tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync"] }
+tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync", "time"] }
 #wayland-backend = { version = "0.3.4", features = ["client_system"] }
 #wayland-client = "0.31.3"
 #wayland-protocols = { version = "0.32.1", features = ["unstable", "client"] }
