--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ async-channel = "2.3.1"
 bytemuck = "1.16.0"
 clap = { version = "4.5.7", features = ["derive"] }
 color-eyre = "0.6.3"
+colorgrad = "0.6.2"
 cpal = "0.15.3"
 evdev = { version = "0.12.2", features = ["tokio"] }
 gdk = { version = "0.8.2", package = "gdk4", features = ["v4_14"] }
