feat: finish overlay for now

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.5.7", features = ["derive"] }
 color-eyre = "0.6.3"
 colorgrad = "0.6.2"
 cpal = "0.15.3"
+enigo = { version = "0.2.1", features = ["wayland"], default-features = false }
 evdev = { version = "0.12.2", features = ["tokio"] }
 gdk = { version = "0.8.2", package = "gdk4", features = ["v4_14"] }
 gdk-wayland = { version = "0.8.2", package = "gdk4-wayland", features = ["wayland_crate", "v4_12"] }
