feat: use single-label to avoid gtk issues, adjust to new message format, make sure to receive all messages in select!.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ colorgrad = "0.6.2"
 cpal = "0.15.3"
 enigo = { version = "0.2.1", features = ["wayland"], default-features = false }
 evdev = { version = "0.12.2", features = ["tokio"] }
+futures-util = "0.3.30"
 gdk = { version = "0.8.2", package = "gdk4", features = ["v4_14"] }
 gdk-wayland = { version = "0.8.2", package = "gdk4-wayland", features = ["wayland_crate", "v4_12"] }
 gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
@@ -22,3 +23,4 @@ gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell" }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync", "time", "macros", "full"] }
+tokio-util = { version = "0.7.11", features = ["codec"] }
