--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ gdk = { version = "0.8.2", package = "gdk4", features = ["v4_14"] }
 gdk-wayland = { version = "0.8.2", package = "gdk4-wayland", features = ["wayland_crate", "v4_12"] }
 gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
 gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell" }
+notify = "6.1.1"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync", "time", "macros", "full"] }
