--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,17 @@ license = "MIT"
 [dependencies]
 async-channel = "2.3.1"
 bytemuck = "1.16.0"
+cascade = "1.0.1"
 clap = { version = "4.5.7", features = ["derive"] }
 color-eyre = "0.6.3"
 colorgrad = "0.6.2"
 cpal = "0.15.3"
-enigo = { version = "0.2.1", features = ["wayland"], default-features = false }
+enigo = { version = "0.2.1", features = ["wayland", "xdo"], default-features = false }
 evdev = { version = "0.12.2", features = ["tokio"] }
 futures-util = "0.3.30"
 gdk = { version = "0.8.2", package = "gdk4", features = ["v4_14"] }
 gdk-wayland = { version = "0.8.2", package = "gdk4-wayland", features = ["wayland_crate", "v4_12"] }
+gdk-x11 = { version = "0.8.2", package = "gdk4-x11", features = ["xlib", "x11"] }
 gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
 gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell" }
 notify = "6.1.1"
